--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Picture-in-Picture</title>
-    <!-- <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=/> -->
+
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 <body>
-
-
+    <!-- Video  -->
+    <video src="" id="video" controls height="360" width="640" hidden></video>
+    <!-- Button -->
+    <div class="button-container">
+        <button id="button">
+            START
+        </button>
+    </div>
 
     <!-- SCRIPT-->
 <script src="./script.js"></script>
